--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 .main_container{
     width: 100%;
     height: 100vh;
-    background-color: grey;
+    /* background-color: grey; */
     position: relative;
 }
 .main_body{
@@ -17,10 +17,10 @@
     grid-template-columns: 0.7fr 3fr;
 }
 .navbar{
-    background-color: red;
+    background-color:#f3f2f2;
     height: 100vh;
 }
 .home{
-    background-color: blue;
+    background-color:#1f7396;
     height: 100vh;
 }
