--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -6,7 +6,7 @@
     padding: 40px 20px 60px 60px;
     gap: 10px;
     height: 100vh;
-    border-left: 1px solid black;
+    /* border-left: 1px solid black; */
 
 }
 .box{
