--- a/src/Components/Play/Play.css
+++ b/src/Components/Play/Play.css
@@ -4,7 +4,7 @@
     height: 70px;
     position: fixed;
     bottom: 0;
-    color: rgb(1, 0, 54);
+    color: rgb(0, 0, 48);
 }
 .range_div{
     display: flex;
@@ -28,7 +28,7 @@
     overflow: hidden;
 }
 .range::-webkit-slider-runnable-track{
-    background-color: lightblue;
+    background-color: #e59560;
     height: 5px;
     cursor: pointer;
     opacity: 1;
@@ -129,7 +129,7 @@
 .button_section button{
     background-color: transparent;
     border: none;
-    color: rgb(12, 0, 29);
+    color: rgb(0, 0, 17);
 }
 .right_aside{
     display: flex;
