--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,4 +1,4 @@
-.boxcontainer{
+.boxcontainer {
     background-color: #f3f2f2;
     width: 100%;
     display:grid;
@@ -6,6 +6,7 @@
     padding: 40px 20px 60px 60px;
     gap: 10px;
     height: 100vh;
+    overflow: scroll;
     /* border-left: 1px solid black; */
 
 }
