--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -6,12 +6,25 @@ li{
     padding-left: 20px;
     background-color: white;
     border-right: 2px solid rgb(0, 0, 29);
+    display: fixed;
+    left: 0;
+    position: relative;
+    top: 0;
 }
 .navhead{
     display: flex;
     margin: 10px 0 20px;
     align-items: center;
     font-weight: 700;
+    /* background-color: red; */
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    justify-content: center;
+    font-size: 30px;
+    text-transform: uppercase;
 }
 .navhead img{
     width: 30px;
@@ -19,6 +32,10 @@ li{
 }
 .navdiv{
     text-decoration: none;
+    margin-top: 30px;
+}
+.navdiv:first-child{
+    margin-top: 75px;
 }
 .navdiv h3{
     margin-bottom: 20px;
