--- a/src/Components/Queue/Queue.css
+++ b/src/Components/Queue/Queue.css
@@ -1,9 +1,11 @@
 .queue_container{
     padding-left: 30px;
+   overflow: scroll;
+   overflow-y: scroll;
 }
 .queue_container h3{
-    margin-bottom: 40px;
-    margin-top: 40px;
+    margin-bottom: 30px;
+    margin-top: 25px;
     font-size: 30px;
     font-weight: 700;
     text-align: center;
